# DR

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  manual.md
alignment/: CMakeLists.txt  Makefile  aligner.cpp  aligner.hpp  alignment_piece.hpp  alignments.cbp  cigar_alignment.hpp  cmake_install.cmake  contigs.cpp  contigs.hpp  ftree.hpp  hmm.cpp  hmm.hpp  marked_alignment.hpp  sequence.hpp  simple_alignment.cpp  verify.hpp
common/: CMakeLists.txt  bloom_filter.hpp  cl_parser.cpp  cl_parser.hpp  dir_utils.hpp  logging.hpp  omp_utils.hpp  oneline_utils.hpp  output_utils.hpp  simple_computation.hpp  stream.hpp  string_utils.hpp
dbg/: CMakeLists.txt  assembly_graph.hpp  dbg_construction.hpp  dbg_disjointigs.hpp  de_bruijn.cpp  minimizer_selection.hpp  rolling_hash.hpp  sparse_dbg.hpp
docs/: jumbodbg_manual.md  lja_manual.md
minimap2/: CMakeLists.txt  Makefile  bseq.c  cigar.hpp  cmake_install.cmake  example  index.c  kseq.c  kstring.h  minimap.h  minimap2_master  minimap2_master.cbp  minimap_interface.cpp  minimap_interface.hpp
minimap2/sse2neon/: emmintrin.h
parameters/: hmm.txt
projects/: CMakeLists.txt
projects/dbg/: CMakeLists.txt  dbg_construction.hpp  dbg_disjointigs.hpp  de_bruijn.cpp  hash_utils.hpp  minimizer_selection.hpp  rolling_hash.hpp  sparse_dbg.hpp
projects/mosaic/: CMakeLists.txt  main.cpp
projects/scripts/: CMakeLists.txt  assembly_stats.cpp  count_perfect.cpp  dump_reads.cpp  extract_from_paf.cpp  filter_long.cpp  main.cpp  position_analysis.cpp  read_filter.cpp  refill_fasta.cpp  simulate_from_paf.cpp
py/resolution/sequence_graph/: path_graph_multik.py
sequences/: CMakeLists.txt  IntrusiveRefCntPtr.h  contigs.hpp  seqio.hpp  sequence.hpp
src/lib/: CMakeLists.txt
src/lib/ksw2/: ksw_wrapper.hpp
src/projects/: CMakeLists.txt
src/projects/dbg/: CMakeLists.txt  ccdbg.cpp  compact_path.hpp  component.cpp  component.hpp  correction_utils.hpp  crude_correct.cpp  crude_correct.hpp  dbg.cpp  dbg_construction.cpp  dbg_construction.hpp  dbg_disjointigs.cpp  dbg_disjointigs.hpp  de_bruijn.cpp  diploidy_analysis.hpp  edit_distance.hpp  error_correction.hpp  extract.cpp  ff.hpp  gap_closing.hpp  graph_algorithms.cpp  graph_algorithms.hpp  graph_alignment_storage.cpp  graph_alignment_storage.hpp  graph_modification.hpp  graph_printing.hpp  graph_stats.hpp  hash_utils.hpp  initial_correction.hpp  lja.cpp  manyk_correction.cpp  manyk_correction.hpp  minimizer_selection.cpp  minimizer_selection.hpp  mult_correction.hpp  multiplicity_estimation.cpp  multiplicity_estimation.hpp  parameter_estimator.hpp  paths.cpp  paths.hpp  (+10 more)
src/projects/error_correction/: CMakeLists.txt  crude_correct.cpp  crude_correct.hpp  dimer_correction.cpp  dimer_correction.hpp  diploidy_analysis.hpp  edit_distance.hpp  initial_correction.cpp  initial_correction.hpp  manyk_correction.cpp  mitochondria_rescue.hpp  mult_correction.hpp  multiplicity_estimation.cpp  multiplicity_estimation.hpp  parameter_estimator.hpp  tip_correction.hpp  uniqueness.hpp
src/projects/lja/: CMakeLists.txt  dbg.cpp  diploidy_analysis.hpp  gap_closing.hpp  lja.cpp  multi_graph.hpp  subdataset_processing.cpp  subdataset_processing.hpp
src/projects/mosaic/: main.cpp
src/projects/polishing/: CMakeLists.txt  homopolish.cpp  run_polishing.cpp
src/projects/scripts/: CMakeLists.txt  assembly_stats.cpp  compress.cpp  compress_bed.cpp  compress_reads.cpp  coords_compress.cpp  count_paf.cpp  count_perfect.cpp  count_reads.cpp  detect_dimers.cpp  exact_matcher.cpp  exact_matcher.hpp  extract.cpp  extract_from_paf.cpp  filter_long.cpp  find.cpp  homopolish.cpp  main.cpp  parse_gfa.cpp  parse_quast.cpp  perfect_align.cpp  position_analysis.cpp  prepare_final.cpp  prepare_ref_paths.cpp  refill_fasta.cpp  remove_duplicates.cpp  remove_rc.cpp  run.cpp  simulate_from_paf.cpp  split_gfa.cpp  stats_from_paf.cpp  subseq.cpp
src/projects/scripts/homopolish_supplementary/: check_uncovered.py  classify_snps.py  count_classified_stats.py  extract_reads.py  get_cov_alignments.py  get_uncovered_regions.py  resort_reads.py  tmp.paf
src/tests/: test_alignment.cpp  test_hmm.cpp
src/tools/: CMakeLists.txt
src/tools/alignment/: CMakeLists.txt  aligner.hpp  alignment_piece.cpp  cigar_alignment.hpp  ftree.hpp  marked_alignment.hpp  simple_alignment.cpp
src/tools/common/: CMakeLists.txt  bloom_filter.hpp  cl_parser.cpp  cl_parser.hpp  hash_utils.hpp  logging.hpp  omp_utils.hpp  rolling_hash.hpp  string_utils.hpp
src/tools/disjointigs/flye_assemble/: CMakeLists.txt  flye-assemble.cbp  parameters_estimator.h
src/tools/disjointigs/flye_sequence/: CMakeLists.txt  kmer.h
src/tools/minimap2/: bseq.h  index.c  kseq.h  minimap_interface.cpp  minimap_interface.hpp  mmpriv.h
src/tools/sequences/: contigs.cpp  contigs.hpp  seqio.hpp  sequence.cpp  sequence.hpp  stream.hpp  verify.hpp
tests/: CMakeLists.txt  Makefile  Tests.cbp  cmake_install.cmake  run_tests  test_alignment.cpp  test_minimap.cpp
tests/googletest-master/: googletest-distribution.cbp
tests/googletest-master/googlemock/: gmock.cbp
tests/googletest-master/googletest/: gtest.cbp
tools/: CMakeLists.txt
tools/alignment/: CMakeLists.txt  aligner.hpp  alignment_piece.hpp  cigar_alignment.hpp  marked_alignment.hpp  simple_alignment.cpp
tools/common/: CMakeLists.txt  cl_parser.cpp  cl_parser.hpp  logging.hpp  omp_utils.hpp  oneline_utils.hpp  output_utils.hpp  string_utils.hpp
tools/disjointigs/: CMakeLists.txt
tools/disjointigs/flye_assemble/: chimera.cpp  chimera.h  cmake_install.cmake  extender.cpp  extender.h  main_assemble.cpp  parameters_estimator.cpp
tools/disjointigs/flye_common/: config.h
tools/disjointigs/flye_sequence/: consensus_generator.h  overlap.h  vertex_index.h
tools/minimap2/: ksw2_ll_sse.c  map.c  minimap_interface.cpp  minimap_interface.hpp  options.c
tools/minimap2/sse2neon/: emmintrin.h
tools/sequences/: contigs.hpp  seqio.hpp  sequence.hpp
