project(scripts)
set(CMAKE_CXX_STANDARD 14)
add_executable(analyse_hifi main.cpp)
add_executable(analyse_positions position_analysis.cpp)
add_executable(read_filter read_filter.cpp)
add_executable(simulate_from_paf simulate_from_paf.cpp)
add_executable(dump_reads dump_reads.cpp)
target_link_libraries(analyse_hifi common minimap sequence alignment)
target_link_libraries(analyse_positions common minimap sequence alignment)
target_link_libraries(read_filter common sequence)
target_link_libraries(simulate_from_paf common sequence)
target_link_libraries(dump_reads common sequence)
