project(scripts)
set(CMAKE_CXX_STANDARD 14)
add_executable(analyse_hifi main.cpp)
add_executable(count_perfect count_perfect.cpp)
add_executable(analyse_positions position_analysis.cpp)
add_executable(read_filter read_filter.cpp)
add_executable(simulate_from_paf simulate_from_paf.cpp)
target_link_libraries(analyse_hifi common minimap sequence alignment)
target_link_libraries(count_perfect common minimap sequence alignment)
target_link_libraries(analyse_positions common minimap sequence alignment)
target_link_libraries(read_filter common sequence)
target_link_libraries(simulate_from_paf common sequence)
