project(scripts)
set(CMAKE_CXX_STANDARD 14)
add_executable(analyse_hifi main.cpp)
add_executable(count_perfect count_perfect.cpp)
add_executable(analyse_positions position_analysis.cpp)
add_executable(read_filter read_filter.cpp)
add_executable(simulate_from_paf simulate_from_paf.cpp)
add_executable(extract_from_paf extract_from_paf.cpp)
add_executable(refill_fasta refill_fasta.cpp)
add_executable(filter_long filter_long.cpp)
add_executable(count_reads count_reads.cpp)
add_executable(count_paf count_paf.cpp)
target_link_libraries(analyse_hifi common minimap sequence alignment)
target_link_libraries(count_perfect common minimap sequence alignment)
target_link_libraries(analyse_positions common minimap sequence alignment)
target_link_libraries(read_filter common sequence)
target_link_libraries(simulate_from_paf common sequence)
target_link_libraries(extract_from_paf common sequence)
target_link_libraries(refill_fasta common sequence)
target_link_libraries(filter_long common sequence)
target_link_libraries(count_reads common sequence)
target_link_libraries(count_paf common sequence)