project(scripts)
set(CMAKE_CXX_STANDARD 14)
add_executable(analyse_hifi main.cpp)
add_executable(count_perfect count_perfect.cpp)
add_executable(analyse_positions position_analysis.cpp)
add_executable(read_filter read_filter.cpp)
add_executable(simulate_from_paf simulate_from_paf.cpp)
add_executable(extract_from_paf extract_from_paf.cpp)
add_executable(refill_fasta refill_fasta.cpp)
add_executable(filter_long filter_long.cpp)
add_executable(count_reads count_reads.cpp)
add_executable(count_paf count_paf.cpp)
add_executable(assembly_stats assembly_stats.cpp)
add_executable(stats_from_paf stats_from_paf.cpp)
add_executable(find find.cpp)
add_executable(subseq subseq.cpp)
add_executable(perfect_align perfect_align.cpp)
add_executable(compress compress.cpp)
add_executable(remove_rc remove_rc.cpp)
add_executable(prepare_final prepare_final.cpp)
add_executable(prepare_ref_paths prepare_ref_paths.cpp)
add_executable(parse_gfa parse_gfa.cpp)
add_executable(run run.cpp)
add_executable(remove_duplicates remove_duplicates.cpp)
add_executable(coords_compress coords_compress.cpp)
add_executable(compress_reads compress_reads.cpp)
add_executable(detect_dimers detect_dimers.cpp)
add_executable(compress_bed compress_bed.cpp)
add_executable(parse_quast parse_quast.cpp)
add_executable(split_gfa split_gfa.cpp)
target_link_libraries(analyse_hifi common minimap sequence alignment)
target_link_libraries(count_perfect common minimap sequence alignment)
target_link_libraries(analyse_positions common minimap sequence alignment)
target_link_libraries(read_filter common sequence)
target_link_libraries(simulate_from_paf common sequence)
target_link_libraries(extract_from_paf common sequence)
target_link_libraries(refill_fasta common sequence)
target_link_libraries(filter_long common sequence)
target_link_libraries(count_reads common sequence)
target_link_libraries(count_paf common sequence)
target_link_libraries(assembly_stats common sequence)
target_link_libraries(stats_from_paf common sequence)
target_link_libraries(find common sequence alignment)
target_link_libraries(subseq common sequence alignment)
target_link_libraries(perfect_align common sequence)
target_link_libraries(compress common sequence)
target_link_libraries(remove_rc common sequence)
target_link_libraries(prepare_final common sequence)
target_link_libraries(prepare_ref_paths common sequence)
target_link_libraries(parse_gfa common sequence)
target_link_libraries(run common)
target_link_libraries(remove_duplicates common sequence)
target_link_libraries(coords_compress common sequence)
target_link_libraries(compress_reads common sequence)
target_link_libraries(detect_dimers common sequence)
target_link_libraries(compress_bed common sequence)
target_link_libraries(parse_quast common sequence)
target_link_libraries(split_gfa common sequence)

